--- a/examples/620-routing-parameters/src/components/MainNavigation/MainNavigation.module.css
+++ b/examples/620-routing-parameters/src/components/MainNavigation/MainNavigation.module.css
@@ -1,4 +1,4 @@
-/*Main navigation styles*/
+/*Main navigation styles - edit per your needs */
 nav ul {
     list-style-type: none;
 }
@@ -19,6 +19,9 @@ nav ul a:hover {
     text-decoration: none;
 }
 
-nav .activeRoute {
+.activeRoute {
     border-bottom: 3px solid #09d3ac;
+}
+.inactiveRoute {
+    border-bottom: 3px solid transparent;
 }
