fix: some small updates

--- a/examples/610-active-link-and-code/src/components/MainNavigation/MainNavigation.module.css
+++ b/examples/610-active-link-and-code/src/components/MainNavigation/MainNavigation.module.css
@@ -22,3 +22,6 @@ ul a:hover {
 .activeRoute {
     border-bottom: 3px solid #09d3ac;
 }
+.inactiveRoute {
+    border-bottom: 3px solid transparent;
+}
